--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<title>Hack for Humanity</title>
-        <h1><a style="text-decoration:none" href= "index.html">Hack for Humanity</a></h1>
+        <h1><a style="text-decoration:none; font-size: 60px;" href= "../index.html">ReEntry Resort</a></h1>
         <hr>
 		<ul class="navigationBar">
 			<li><a style="text-decoration:none" href= "index.html">Home</a></li>
