--- a/html/map3.html
+++ b/html/map3.html
@@ -1,3 +1,8 @@
+<!--
+@author: Maddie Waldie, Neena Ekanathan, Kamya Krishnan, and Divya Syal
+@version: 1.0
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
